--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,14 +1,18 @@
 body {
-    background-color:#ddd;
+        padding: 0;
+        margin: 0;
+        font-family: Georgia, "Times New Roman", Times, serif;
+        font-size: 18px;
+        line-height: 150%;
+        color: #333;
+        background: #efeee7;
 }
-#bio-image{
-    height: 500px;
+.bio-image{
+    height: 200px;
     width: 200px;
-    
+    float: left;
 }
-.navbar{
-    float: right;
-}
+
 .name {
     margin: 0%;
     float: left;
@@ -19,8 +23,8 @@ body {
 
 }
 .about-me1 {
-   width: 50%;
-   float: right;
+   width: 700px;
+   float: left;
     margin: 13px;
 }
 a {
@@ -29,9 +33,24 @@ a {
 }
 .container {
     background-color: #fff;
-    width: 80%;
-    margin: 28px;
+    width: 1024px;;
+    margin: 0 auto;
+    height: 500px;
+    float: center;
 }
 .about-me{
     color: #4aaaa5;
 }
+
+footer {
+float: center;
+text-align: bottom; 
+}
+
+header {
+    background-color:  #ffffff;
+    width: 100%;
+    height: 75px;
+}
+.navbar{
+    float:right ;
