--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11,46 +11,60 @@ body {
     height: 200px;
     width: 200px;
     float: left;
+    margin-right: 12px;
+    margin-left: 20px;
+    margin-top: 20px;
 }
 
 .name {
-    margin: 0%;
+    margin-left: 204px;
     float: left;
-    text-align: left;
     background-color: #4aaaa5;
     color: #fff;
-    padding: 7px;
-
 }
 .about-me1 {
-   width: 700px;
-   float: left;
-    margin: 13px;
+   width: 0 auto;
+   float: inherit;
+    margin: 20px;
+    margin-top: 24px;
 }
 a {
     color: #777;
     text-decoration: none;
+    text-decoration: upright;
 }
 .container {
     background-color: #fff;
-    width: 1024px;;
+    width: 960px;
     margin: 0 auto;
-    height: 500px;
     float: center;
 }
 .about-me{
     color: #4aaaa5;
+    margin:20px;
+    padding: 20px;
 }
 
 footer {
-float: center;
-text-align: bottom; 
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem; 
+    text-align: center;
+    background-color: #777;
 }
 
 header {
     background-color:  #ffffff;
     width: 100%;
     height: 75px;
+    box-sizing: border-box;
 }
 .navbar{
-    float:right ;
+    float:right;
+    margin-right: 204px;
+    margin-top: 20px;
+}
+hr {
+    width: 90;
+}
