--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,11 +1,12 @@
 body {
         padding: 0;
         margin: 0;
-        font-family: Georgia, "Times New Roman", Times, serif;
+        font-family: Arial, Helvetica, sans-serif;
         font-size: 18px;
         line-height: 150%;
-        color: #333;
+        color:#777;
         background: #efeee7;
+        border-color:#ddd;
 }
 .bio-image{
     height: 200px;
@@ -20,6 +21,9 @@ body {
     float: left;
     background-color: #4aaaa5;
     color: #fff;
+    block-size: 100%;
+    margin-top: 0;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .about-me1 {
    width: 0 auto;
@@ -44,6 +48,7 @@ a {
     margin-bottom: 0px;
     margin-left: 6px;
     padding: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif
 }
 footer {
     position: absolute;
@@ -51,19 +56,24 @@ footer {
     width: 100%;
     height: 2.5rem; 
     text-align: center;
-    background-color: #777;
+    background-color: #666;
     color: #fff;
+    border-top: 8px solid #4aaaa5;
 }
 header {
     background-color:  #ffffff;
+    border: 4px;
+    border: #ccc;
     width: 100%;
     height: 75px;
     box-sizing: border-box;
+   font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .navbar{
     float:right;
     margin-right: 204px;
     margin-top: 20px;
+    box-sizing: border-box;
 }
 hr {
     margin-left: 20px;
@@ -75,8 +85,9 @@ hr {
     margin-bottom: 0px;
     margin-left: 6px;
     padding: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.form {
+form {
     width: 0 auto;
     float: inherit;
      margin: 20px;
@@ -100,6 +111,7 @@ button {
     margin-bottom: 0px;
     margin-left: 6px;
     padding: 20px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .portfolio-img {
     float: inherit;
