--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,119 +1,125 @@
 body {
-        padding: 0;
-        margin: 0;
-        font-family: Arial, Helvetica, sans-serif;
-        font-size: 18px;
-        line-height: 150%;
-        color:#777;
-        background: #efeee7;
-        border-color:#ddd;
+    padding: 0;
+    margin: 0;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 18px;
+    line-height: 150%;
+    color:#777;
+    background: #efeee7;
+    border-color:#ddd;
 }
 .bio-image{
-    height: 200px;
-    width: 200px;
-    float: left;
-    margin-right: 20px;
-    margin-left: 20px;
-    margin-top: 20px;
+height: 200px;
+width: 200px;
+float: left;
+margin-right: 20px;
+margin-left: 20px;
+margin-top: 20px;
 }
 .name {
-    margin-left: 204px;
-    float: left;
-    background-color: #4aaaa5;
-    color: #fff;
-    block-size: 100%;
-    margin-top: 0;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+margin-left: 204px;
+float: left;
+background-color: #4aaaa5;
+color: #fff;
+block-size: 100%;
+margin-top: 0;
+font-family: Georgia, 'Times New Roman', Times, serif;
 }
 .about-me1 {
-   width: 0 auto;
-   float: inherit;
-    margin: 20px;
-    margin-top: 24px;
+width: 0 auto;
+float: inherit;
+margin: 20px;
+margin-top: 24px;
 }
 a {
-    color: #777;
-    text-decoration: none;
-    text-decoration: upright;
+color: #777;
+text-decoration: none;
+text-decoration: upright;
 }
 .container {
-    background-color: #fff;
-    width: 960px;
-    margin: 0 auto;
-    float: center;
+background-color: #fff;
+width: 960px;
+margin: auto;
+float: center;
 }
 .about-me{
-    color: #4aaaa5;
-    margin-top: 2px;
-    margin-bottom: 0px;
-    margin-left: 6px;
-    padding: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif
+color: #4aaaa5;
+margin-top: 2px;
+margin-bottom: 0px;
+margin-left: 6px;
+padding: 20px;
+font-family: Georgia, 'Times New Roman', Times, serif;
+overflow: hidden;
 }
 footer {
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    height: 2.5rem; 
-    text-align: center;
-    background-color: #666;
-    color: #fff;
-    border-top: 8px solid #4aaaa5;
+position: absolute;
+bottom: 0;
+width: 100%;
+height: 2.5rem; 
+text-align: center;
+background-color: #666;
+color: #fff;
+border-top: 8px solid #4aaaa5;
 }
 header {
-    background-color:  #ffffff;
-    border: 4px;
-    border: #ccc;
-    width: 100%;
-    height: 75px;
-    box-sizing: border-box;
-   font-family: Georgia, 'Times New Roman', Times, serif;
+background-color:  #ffffff;
+border: 4px;
+border: #ccc;
+width: 100%;
+height: 75px;
+box-sizing: border-box;
+font-family: Georgia, 'Times New Roman', Times, serif;
+overflow: hidden;
 }
 .navbar{
-    float:right;
-    margin-right: 204px;
-    margin-top: 20px;
-    box-sizing: border-box;
+float:right;
+margin-right: 204px;
+margin-top: 20px;
+box-sizing: border-box;
 }
 hr {
-    margin-left: 20px;
-    margin-right: 20px;
+margin-left: 20px;
+margin-right: 20px;
 }
 .contact{
-    color: #4aaaa5;
-    margin-top: 2px;
-    margin-bottom: 0px;
-    margin-left: 6px;
-    padding: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+color: #4aaaa5;
+margin-top: 2px;
+margin-bottom: 0px;
+margin-left: 6px;
+padding: 20px;
+font-family: Georgia, 'Times New Roman', Times, serif;
 }
 form {
-    width: 0 auto;
-    float: inherit;
-     margin: 20px;
-     margin-top: 24px; 
+width: 0 auto;
+float: inherit;
+ margin: 20px;
+ margin-top: 24px; 
 }
 input {
-    width: 100%;
+width: 100%;
 }
 textarea {
-    width: 100%
+width: 100%
 }
 button {
-    background-color: #4aaaa5;
-    color: #fff;
-    margin-left: 20px;
-    margin-bottom: 20px;
+background-color: #4aaaa5;
+color: #fff;
+margin-left: 20px;
+margin-bottom: 20px;
 }
 .portfolio-heading {
-    color: #4aaaa5;
-    margin-top: 2px;
-    margin-bottom: 0px;
-    margin-left: 6px;
-    padding: 20px;
-    font-family: Georgia, 'Times New Roman', Times, serif;
+color: #4aaaa5;
+margin-top: 2px;
+margin-bottom: 0px;
+margin-left: 6px;
+padding: 20px;
+font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.portfolio-img {
-    float: inherit;
-    margin: 20px;
+.portfolio-img:hover {
+width: 200px;
+height: 200px;
+float: inherit;
+background-size: 100%;
+margin: 4px;
+transition:0.5s;
 }
