--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,6 @@
+*{
+ 
+}
 body {
     padding: 0;
     margin: 0;
@@ -17,7 +20,7 @@ margin-left: 20px;
 margin-top: 20px;
 }
 .name {
-margin-left: 204px;
+margin-left: 205px;
 float: left;
 background-color: #4aaaa5;
 color: #fff;
@@ -69,11 +72,10 @@ width: 100%;
 height: 75px;
 box-sizing: border-box;
 font-family: Georgia, 'Times New Roman', Times, serif;
-overflow: hidden;
 }
 .navbar{
 float:right;
-margin-right: 204px;
+margin-right: 205px;
 margin-top: 20px;
 box-sizing: border-box;
 }
@@ -115,7 +117,7 @@ margin-left: 6px;
 padding: 20px;
 font-family: Georgia, 'Times New Roman', Times, serif;
 }
-.portfolio-img:hover {
+.portfolio-img:hover{
 width: 200px;
 height: 200px;
 float: inherit;
