--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -78,6 +78,7 @@ float:right;
 margin-right: 205px;
 margin-top: 20px;
 box-sizing: border-box;
+font-family: Arial, Helvetica, sans-serif;
 }
 hr {
 margin-left: 20px;
@@ -117,11 +118,35 @@ margin-left: 6px;
 padding: 20px;
 font-family: Georgia, 'Times New Roman', Times, serif;
 }
+.portfolio-img{
+    margin: 20px;
+}
 .portfolio-img:hover{
 width: 200px;
 height: 200px;
 float: inherit;
 background-size: 100%;
-margin: 4px;
+margin: 2px;
 transition:0.5s;
+}
+.box{
+    position: relative;
+    display: inline-block;
+
+}
+.box .text{
+    position: absolute;
+    z-index: 999;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    top: 66.9%;
+    text-align: center;
+    background-color: #4aaaa5;
+    width: 83.3%;
+    color: #ffffff;
+}
+.text{
+    line-height: 1px;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
